--- a/Contact.html
+++ b/Contact.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h2>
-        <a class = " email" href="mailto: Stella.informatica12@gmail.com"> 📧 Stella.informatica12@gmail.com 📧 </a>
+        <a class = " email" href="mailto: Martin.inform@gmail.com"> 📧 Martin.inform@gmail.com 📧 </a>
     </h2>
     <h2>
-        📞 +34 635 323 415 📞
+        📞 +34 889 675 123 📞
     </h2>
 </body>
 </html>
